<resources>
    <string name="app_name">QuicaR</string>
    <string name="sign_in_button">Sign in</string>
    <string name="sign_up_button">Sign up</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="fcm_message">FCM Message</string>
    <string name="button_validate">Validate</string>
    <string name="snooze">SNOOZE</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <!--
        This is the name that users will see when interacting with this channel.
        It should describe the category of notifications that will be sent through this channel
     -->
    <!-- [START fcm_default_icon_string] -->
    <string name="default_notification_channel_name" translatable="true">Request</string>
    <!-- [END fcm_default_icon_string] -->

    <string name="map_key" translatable="false">
    AIzaSyCyECZAmZ2NxQz10Qijm-ngagqBdHJblzk
    </string>

    <string name="navigation_draw_open">Open navigation draw</string>
    <string name="navigation_draw_close">Close navigation draw</string>

    <!-- [START design for general user profile -->
    <string name="profile_email">Email address </string>
    <string name="user_profile">user profile </string>
    <string name="profile_phone"> Phone number</string>
    <string name="profile_username">user name</string>
    <string name="profile_password">password</string>
    <string name="profile_firstName">first name</string>
    <string name="profile_lastName">last name</string>
    <string name="profile_birthDate">birth date</string>
    <string name="profile_gender_hint">\t\tgender</string>
    <string name="save_button">save</string>

    <string name="profile_driver_rate">rate</string>
    <string name="profile_driver_sin">sin number</string>


    <string name="gender_prompt">Choose a gender</string>

    <string-array name="gender_array">
        <item>no selection</item>
        <item>male</item>
        <item>female</item>
        <item>gender queer</item>

    </string-array>

    <!-- [end] -->

    <!-- [START design for register driver  -->
    <string name="register_page">Sign up as a Driver</string>
    <string name="register_reminder">please enter your associated email and password to proceed</string>
    <string name="profile_driver_license_number">driver license number</string>
    <string name="profile_Driver_birthDate">birth date</string>
    <string name="profile_validate_plate_number">validate plate number</string>
    <string name="validate_button">Validate</string>
    <string name="qr_description">this is a qr code</string>
    <string name="refresh_description">this is a refresh button</string>
    <string name="background_description">white</string>
    <string name="name_on_card">Name on the card</string>
    <string name="card_fragment">this is the card fragment</string>
    <string name="add_card_name">You can find all these information on the card</string>
    <string name="select_amount">select an amount to pay</string>
    <string name="first_content">In the wallet interface, if you want to pay to others, click \"Scan the QR\" button to scan the QR code shown by the payee, then enter the amount and click \"confirm\" button, and finally enter the payment password to complete the payment.</string>
    <string name="first">1. How to pay a payment?</string>
    <string name="second">2. How to receive a payment?</string>
    <string name="second_content">In the wallet interface, if you want to receive money from others, then show the QR code and wait for the payer to complete the payment operation. If the payment is successful, you can directly see the change of the wallet balance in the \"change balance\" at the bottom of the QR code. The qr code is automatically updated every half minute to keep the money safe.</string>
    <string name="finding_your_ride">Finding your ride...</string>
    <string name="help">Help</string>
    <string name="pay_record">Pay History</string>
    <string name="change_password">Change Password</string>
    <string name="we_take_importance_to_feed_back_from_you_and_we_work_hard_to_make_it_the_best_please_select_the_problem_and_let_us_know">We take importance to feed back from you and\nwe work hard to make it the best, please select\nthe problem and let us know.</string>
    <string name="verify_or_complete_your_card_information">Verify or complete your card information</string>
    <string name="cart_details">Cart Details</string>


    <!-- [end] -->

</resources>