<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.sartainstudios.contacts.MyContacts">

    <item
        android:id="@+id/help"
        android:icon="@android:drawable/ic_menu_help"
        android:title="@string/help" />

    <item
        android:id="@+id/pay_record"
        android:icon="@android:drawable/ic_menu_my_calendar"
        android:title="@string/pay_record" />

    <item
        android:id="@+id/change_password"
        android:icon="@android:drawable/ic_menu_rotate"
        android:title="@string/change_password" />

    <item
        android:id="@+id/reset"
        android:icon="@android:drawable/ic_menu_rotate"
        android:title="Reset your wallet" />

</menu>