<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/first"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/first"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/first_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/first_content"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/second"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/second"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/second_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/second_content"
            android:textSize="15sp"/>



    </LinearLayout>
</ScrollView>