<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="50dp">

    <TextView
    android:id="@+id/register_page"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    android:text="@string/register_page"
    android:textColor="#000000"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.827"
    app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/register_reminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/register_reminder"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.827"
        app:layout_constraintStart_toStartOf="parent" />




    <com.google.android.material.textfield.TextInputLayout
        android:id = "@+id/profile_driver_license_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/profile_driver_license_number"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:textSize="14sp"
            android:background="@drawable/rounded_background" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id = "@+id/profile_driver_sin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/profile_driver_sin"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@drawable/rounded_background"
            android:textSize="14sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id = "@+id/profile_validate_plate_number"
        android:layout_width="match_parent"
        android:hint="@string/profile_validate_plate_number"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"


            android:background="@drawable/rounded_background"
            android:textSize="14sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="312dp"
        android:layout_height="86dp">

        <Button
            android:id="@+id/validate_button"
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:onClick="Validate"
            android:text="@string/validate_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

        </Button>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>